# MFUA-work

./: Homework.txt  NewWork.html  ReadMe.md  sss  Офис.docx
2 course/ARCHETICTURE/NETWORKING/FIRST_NETWORK/FileSender/server/data/: client.cpp  send_me.txt  server.cpp  utils.cpp  utils.h
2 course/ARCHETICTURE/NETWORKING/FIRST_NETWORK/SocketWrapper/: SocketWrapper.h  base_socket.cpp  client.cpp  client_core.cpp  client_socket.cpp  server.cpp  server_core.cpp
2 course/ARCHETICTURE/NETWORKING/TimeSync/: SocketWrapper.h  base_socket.cpp  client.cpp  client_core.cpp  client_test.cpp  server.cpp  server_core.cpp  server_socket.cpp
2 course/DATABASE/Efimov_4lab/: THIRD_EX.sql  first_ex.sql  fourth_ex_all.sql  second_ex.sql
2 course/DATABASE/lab_4/: efimov1.sql  efimov2.sql
2 course/DATABASE/lab_5/: 1ex.sql  1ex_2.sql  2ex.sql  2ex_2.sql  3ex_1.sql  3ex_2.sql  3ex_3upd.sql  3ex_4.sql  3ex_5.sql  3ex_6.sql  5ex.sql
2 course/c++/: x
2 course/c++/AHO-KARASIK/: Aho_Corasik.h
2 course/c++/ASSEMBLY/: hack_me.cpp  simple.cpp
2 course/c++/BINARY_TREE/: BT_from_file.cpp
2 course/c++/Instr/: StockAnalytor.cpp  StockAnalytor.hpp  main.cpp  Личная карточка инструктажа.doc
2 course/c++/VECTORS/: hash.cpp
2 course/c++/calc/: calculator.h  emulator_calc.cpp
2 course/c++/day/: date_lib.cpp  vector.cpp
2 course/c++/lab_2/: StockAnalytor.cpp  StockAnalytor.hpp  Индивидуальное задание на практику.doc  Личная карточка инструктажа.doc  Планируемые результаты практики.doc  Рабочий план проведения практики.doc  Титульный лист отчёта.doc
2 course/c++/lab_algor/: first_ex.cpp  second_ex.cpp  third_ex.cpp
2 course/c++/lol/: Lok.cpp
2 course/c++/ortagon/: c.cpp  hask.cpp
2 course/c++/project/: constructor_utils.cpp  iterator.cpp  main.cpp  tree.cpp
2 course/c++/semestr_3/: cstring_codes.cpp  cstring_ex.cpp
2 course/c++/semestr_3/lex/: analyze.cpp
2 course/c++/semestr_3/realloc/: strcat.cpp
Efimov/KeyValueStore/: base_socket.cpp  client_core.cpp  server_core.cpp  store_dump.txt
Efimov/RemoteCalculator/: ReadMe.md  base_socket.cpp  client_core.cpp  core.cpp  server_core.cpp
Efimov/TimeSync/: ReadMe.md  SocketWrapper.h  base_socket.cpp  client.cpp  client_core.cpp  client_socket.cpp  core.cpp  server.cpp  server_core.cpp  server_socket.cpp
Efimov/process/: SocketWrapper.h  client.cpp  client_core.cpp  comp.txt  core.cpp  server.cpp  server_core.cpp
HW30/: FileEncryptForm.cpp  FileEncryptForm.h
HomeWork_30/: CryptoForm.cpp  CryptoForm.h  main.cpp
TEMP/: CMakeLists.txt  HelloForm.cpp  HelloForm.h  main.cpp
